--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "@acceleration/selligent-api",
   "version": "1.0.0",
   "description": "Node wrapper for selligent API",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/api.js",
+  "types": "dist/api.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/auto/*.ts --timeout 5000",
+    "publish:version": "npm version patch && npm run build",
+    "publish:it": "npm run publish:version && npm publish --registry=https://npm.pkg.github.com",
+    "build": "tsc",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "url": "https://github.com/Acceleration/selligent-api"
@@ -15,5 +20,20 @@
     "API"
   ],
   "author": "Jason Morgan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^14.14.10",
+    "@types/request": "^2.48.5",
+    "chai": "*",
+    "dotenv": "^8.2.0",
+    "mocha": "*",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "request": "^2.88.2"
+  }
 }
